src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decSeq
Rule 2     dec -> varDec
Rule 3     dec -> ID LPAREN paramList RPAREN LKEY block RKEY
Rule 4     dec -> type ID LPAREN paramList RPAREN LKEY block RKEY
Rule 5     varDec -> type varSpecSeq SEMICOLON
Rule 6     varSpec -> ID
Rule 7     varSpec -> ID ASSIGN literal
Rule 8     varSpec -> ID LCOR NUMBER RCOR
Rule 9     varSpec -> ID LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY
Rule 10    type -> INT
Rule 11    type -> STRING
Rule 12    type -> BOOLEAN
Rule 13    param -> type ID
Rule 14    param -> type ID RCOR LCOR
Rule 15    block -> varDecList stmtList
Rule 16    stmt -> ifStmt
Rule 17    stmt -> whileStmt
Rule 18    stmt -> forStmt
Rule 19    stmt -> breakStmt
Rule 20    stmt -> returnStmt
Rule 21    stmt -> readStmt
Rule 22    stmt -> writeStmt
Rule 23    stmt -> assign SEMICOLON
Rule 24    stmt -> subCall SEMICOLON
Rule 25    stmt -> error
Rule 26    ifStmt -> IF LPAREN exp RPAREN LKEY block RKEY
Rule 27    ifStmt -> IF LPAREN exp RPAREN LKEY block RKEY ELSE LKEY block RKEY
Rule 28    whileStmt -> WHILE LPAREN exp RPAREN LKEY block RKEY
Rule 29    forStmt -> FOR LPAREN assign SEMICOLON exp SEMICOLON assign RPAREN LKEY block RKEY
Rule 30    breakStmt -> BREAK SEMICOLON
Rule 31    readStmt -> READ var SEMICOLON
Rule 32    writeStmt -> WRITE expList SEMICOLON
Rule 33    returnStmt -> RETURN SEMICOLON
Rule 34    returnStmt -> RETURN exp SEMICOLON
Rule 35    subCall -> ID LPAREN expList RPAREN
Rule 36    assign -> var ASSIGN exp
Rule 37    assign -> var PLUSASSIGN exp
Rule 38    assign -> var MINUSASSIGN exp
Rule 39    assign -> var MULTASSIGN exp
Rule 40    assign -> var DIVIDEASSIGN exp
Rule 41    assign -> var MODASSIGN exp
Rule 42    exp -> exp PLUS exp
Rule 43    exp -> exp MINUS exp
Rule 44    exp -> exp MULT exp
Rule 45    exp -> exp DIVIDE exp
Rule 46    exp -> exp MOD exp
Rule 47    exp -> exp EQUALS exp
Rule 48    exp -> exp DIFFERENT exp
Rule 49    exp -> exp GT exp
Rule 50    exp -> exp GTE exp
Rule 51    exp -> exp LT exp
Rule 52    exp -> exp LTE exp
Rule 53    exp -> exp AND exp
Rule 54    exp -> exp OR exp
Rule 55    exp -> NOT exp
Rule 56    exp -> UMINUS exp
Rule 57    exp -> exp QMARK exp COLON exp
Rule 58    exp -> subCall
Rule 59    exp -> var
Rule 60    exp -> literal
Rule 61    exp -> LPAREN exp RPAREN
Rule 62    var -> ID
Rule 63    var -> ID LCOR exp RCOR
Rule 64    literal -> NUMBER
Rule 65    literal -> STRING_LITERAL
Rule 66    literal -> FALSE
Rule 67    literal -> TRUE
Rule 68    paramList -> paramSeq
Rule 69    paramList -> empty
Rule 70    paramSeq -> param
Rule 71    paramSeq -> param COMMA paramSeq
Rule 72    varDecList -> varDec varDecList
Rule 73    varDecList -> empty
Rule 74    varSpecSeq -> varSpec
Rule 75    varSpecSeq -> varSpec COMMA varSpecSeq
Rule 76    decSeq -> dec
Rule 77    decSeq -> dec decSeq
Rule 78    stmtList -> stmt stmtList
Rule 79    stmtList -> empty
Rule 80    literalSeq -> literal
Rule 81    literalSeq -> literal COMMA literalSeq
Rule 82    expList -> expSeq
Rule 83    expList -> empty
Rule 84    expSeq -> exp
Rule 85    expSeq -> exp COMMA expSeq
Rule 86    empty -> <empty>

Terminals, with rules where they appear

AND                  : 53
ASSIGN               : 7 9 36
BOOLEAN              : 12
BREAK                : 30
COLON                : 57
COMMA                : 71 75 81 85
DIFFERENT            : 48
DIVIDE               : 45
DIVIDEASSIGN         : 40
ELSE                 : 27
EQUALS               : 47
FALSE                : 66
FOR                  : 29
GT                   : 49
GTE                  : 50
ID                   : 3 4 6 7 8 9 13 14 35 62 63
IF                   : 26 27
INT                  : 10
LCOR                 : 8 9 14 63
LKEY                 : 3 4 9 26 27 27 28 29
LPAREN               : 3 4 26 27 28 29 35 61
LT                   : 51
LTE                  : 52
MINUS                : 43
MINUSASSIGN          : 38
MOD                  : 46
MODASSIGN            : 41
MULT                 : 44
MULTASSIGN           : 39
NOT                  : 55
NUMBER               : 8 9 64
OR                   : 54
PLUS                 : 42
PLUSASSIGN           : 37
QMARK                : 57
RCOR                 : 8 9 14 63
READ                 : 31
RETURN               : 33 34
RKEY                 : 3 4 9 26 27 27 28 29
RPAREN               : 3 4 26 27 28 29 35 61
SEMICOLON            : 5 23 24 29 29 30 31 32 33 34
STRING               : 11
STRING_LITERAL       : 65
TRUE                 : 67
UMINUS               : 56
WHILE                : 28
WRITE                : 32
error                : 25

Nonterminals, with rules where they appear

assign               : 23 29 29
block                : 3 4 26 27 27 28 29
breakStmt            : 19
dec                  : 76 77
decSeq               : 1 77
empty                : 69 73 79 83
exp                  : 26 27 28 29 34 36 37 38 39 40 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57 57 57 61 63 84 85
expList              : 32 35
expSeq               : 82 85
forStmt              : 18
ifStmt               : 16
literal              : 7 60 80 81
literalSeq           : 9 81
param                : 70 71
paramList            : 3 4
paramSeq             : 68 71
program              : 0
readStmt             : 21
returnStmt           : 20
stmt                 : 78
stmtList             : 15 78
subCall              : 24 58
type                 : 4 5 13 14
var                  : 31 36 37 38 39 40 41 59
varDec               : 2 72
varDecList           : 15 72
varSpec              : 74 75
varSpecSeq           : 5 75
whileStmt            : 17
writeStmt            : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decSeq
    (76) decSeq -> . dec
    (77) decSeq -> . dec decSeq
    (2) dec -> . varDec
    (3) dec -> . ID LPAREN paramList RPAREN LKEY block RKEY
    (4) dec -> . type ID LPAREN paramList RPAREN LKEY block RKEY
    (5) varDec -> . type varSpecSeq SEMICOLON
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOLEAN

    ID              shift and go to state 5
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    program                        shift and go to state 1
    decSeq                         shift and go to state 2
    dec                            shift and go to state 3
    varDec                         shift and go to state 4
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> decSeq .

    $end            reduce using rule 1 (program -> decSeq .)


state 3

    (76) decSeq -> dec .
    (77) decSeq -> dec . decSeq
    (76) decSeq -> . dec
    (77) decSeq -> . dec decSeq
    (2) dec -> . varDec
    (3) dec -> . ID LPAREN paramList RPAREN LKEY block RKEY
    (4) dec -> . type ID LPAREN paramList RPAREN LKEY block RKEY
    (5) varDec -> . type varSpecSeq SEMICOLON
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOLEAN

    $end            reduce using rule 76 (decSeq -> dec .)
    ID              shift and go to state 5
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    dec                            shift and go to state 3
    decSeq                         shift and go to state 10
    varDec                         shift and go to state 4
    type                           shift and go to state 6

state 4

    (2) dec -> varDec .

    ID              reduce using rule 2 (dec -> varDec .)
    INT             reduce using rule 2 (dec -> varDec .)
    STRING          reduce using rule 2 (dec -> varDec .)
    BOOLEAN         reduce using rule 2 (dec -> varDec .)
    $end            reduce using rule 2 (dec -> varDec .)


state 5

    (3) dec -> ID . LPAREN paramList RPAREN LKEY block RKEY

    LPAREN          shift and go to state 11


state 6

    (4) dec -> type . ID LPAREN paramList RPAREN LKEY block RKEY
    (5) varDec -> type . varSpecSeq SEMICOLON
    (74) varSpecSeq -> . varSpec
    (75) varSpecSeq -> . varSpec COMMA varSpecSeq
    (6) varSpec -> . ID
    (7) varSpec -> . ID ASSIGN literal
    (8) varSpec -> . ID LCOR NUMBER RCOR
    (9) varSpec -> . ID LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    ID              shift and go to state 12

    varSpecSeq                     shift and go to state 13
    varSpec                        shift and go to state 14

state 7

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 8

    (11) type -> STRING .

    ID              reduce using rule 11 (type -> STRING .)


state 9

    (12) type -> BOOLEAN .

    ID              reduce using rule 12 (type -> BOOLEAN .)


state 10

    (77) decSeq -> dec decSeq .

    $end            reduce using rule 77 (decSeq -> dec decSeq .)


state 11

    (3) dec -> ID LPAREN . paramList RPAREN LKEY block RKEY
    (68) paramList -> . paramSeq
    (69) paramList -> . empty
    (70) paramSeq -> . param
    (71) paramSeq -> . param COMMA paramSeq
    (86) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID RCOR LCOR
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOLEAN

    RPAREN          reduce using rule 86 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    paramList                      shift and go to state 15
    paramSeq                       shift and go to state 16
    empty                          shift and go to state 17
    param                          shift and go to state 18
    type                           shift and go to state 19

state 12

    (4) dec -> type ID . LPAREN paramList RPAREN LKEY block RKEY
    (6) varSpec -> ID .
    (7) varSpec -> ID . ASSIGN literal
    (8) varSpec -> ID . LCOR NUMBER RCOR
    (9) varSpec -> ID . LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    LPAREN          shift and go to state 20
    COMMA           reduce using rule 6 (varSpec -> ID .)
    SEMICOLON       reduce using rule 6 (varSpec -> ID .)
    ASSIGN          shift and go to state 21
    LCOR            shift and go to state 22


state 13

    (5) varDec -> type varSpecSeq . SEMICOLON

    SEMICOLON       shift and go to state 23


state 14

    (74) varSpecSeq -> varSpec .
    (75) varSpecSeq -> varSpec . COMMA varSpecSeq

    SEMICOLON       reduce using rule 74 (varSpecSeq -> varSpec .)
    COMMA           shift and go to state 24


state 15

    (3) dec -> ID LPAREN paramList . RPAREN LKEY block RKEY

    RPAREN          shift and go to state 25


state 16

    (68) paramList -> paramSeq .

    RPAREN          reduce using rule 68 (paramList -> paramSeq .)


state 17

    (69) paramList -> empty .

    RPAREN          reduce using rule 69 (paramList -> empty .)


state 18

    (70) paramSeq -> param .
    (71) paramSeq -> param . COMMA paramSeq

    RPAREN          reduce using rule 70 (paramSeq -> param .)
    COMMA           shift and go to state 26


state 19

    (13) param -> type . ID
    (14) param -> type . ID RCOR LCOR

    ID              shift and go to state 27


state 20

    (4) dec -> type ID LPAREN . paramList RPAREN LKEY block RKEY
    (68) paramList -> . paramSeq
    (69) paramList -> . empty
    (70) paramSeq -> . param
    (71) paramSeq -> . param COMMA paramSeq
    (86) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID RCOR LCOR
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOLEAN

    RPAREN          reduce using rule 86 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    type                           shift and go to state 19
    paramList                      shift and go to state 28
    paramSeq                       shift and go to state 16
    empty                          shift and go to state 17
    param                          shift and go to state 18

state 21

    (7) varSpec -> ID ASSIGN . literal
    (64) literal -> . NUMBER
    (65) literal -> . STRING_LITERAL
    (66) literal -> . FALSE
    (67) literal -> . TRUE

    NUMBER          shift and go to state 30
    STRING_LITERAL  shift and go to state 31
    FALSE           shift and go to state 32
    TRUE            shift and go to state 33

    literal                        shift and go to state 29

state 22

    (8) varSpec -> ID LCOR . NUMBER RCOR
    (9) varSpec -> ID LCOR . NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    NUMBER          shift and go to state 34


state 23

    (5) varDec -> type varSpecSeq SEMICOLON .

    ID              reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    INT             reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    STRING          reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    BOOLEAN         reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    $end            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    error           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    IF              reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    WHILE           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    FOR             reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    BREAK           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    RETURN          reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    READ            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    WRITE           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    RKEY            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)


state 24

    (75) varSpecSeq -> varSpec COMMA . varSpecSeq
    (74) varSpecSeq -> . varSpec
    (75) varSpecSeq -> . varSpec COMMA varSpecSeq
    (6) varSpec -> . ID
    (7) varSpec -> . ID ASSIGN literal
    (8) varSpec -> . ID LCOR NUMBER RCOR
    (9) varSpec -> . ID LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    ID              shift and go to state 36

    varSpec                        shift and go to state 14
    varSpecSeq                     shift and go to state 35

state 25

    (3) dec -> ID LPAREN paramList RPAREN . LKEY block RKEY

    LKEY            shift and go to state 37


state 26

    (71) paramSeq -> param COMMA . paramSeq
    (70) paramSeq -> . param
    (71) paramSeq -> . param COMMA paramSeq
    (13) param -> . type ID
    (14) param -> . type ID RCOR LCOR
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOLEAN

    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    param                          shift and go to state 18
    paramSeq                       shift and go to state 38
    type                           shift and go to state 19

state 27

    (13) param -> type ID .
    (14) param -> type ID . RCOR LCOR

    COMMA           reduce using rule 13 (param -> type ID .)
    RPAREN          reduce using rule 13 (param -> type ID .)
    RCOR            shift and go to state 39


state 28

    (4) dec -> type ID LPAREN paramList . RPAREN LKEY block RKEY

    RPAREN          shift and go to state 40


state 29

    (7) varSpec -> ID ASSIGN literal .

    COMMA           reduce using rule 7 (varSpec -> ID ASSIGN literal .)
    SEMICOLON       reduce using rule 7 (varSpec -> ID ASSIGN literal .)


state 30

    (64) literal -> NUMBER .

    COMMA           reduce using rule 64 (literal -> NUMBER .)
    SEMICOLON       reduce using rule 64 (literal -> NUMBER .)
    PLUS            reduce using rule 64 (literal -> NUMBER .)
    MINUS           reduce using rule 64 (literal -> NUMBER .)
    MULT            reduce using rule 64 (literal -> NUMBER .)
    DIVIDE          reduce using rule 64 (literal -> NUMBER .)
    MOD             reduce using rule 64 (literal -> NUMBER .)
    EQUALS          reduce using rule 64 (literal -> NUMBER .)
    DIFFERENT       reduce using rule 64 (literal -> NUMBER .)
    GT              reduce using rule 64 (literal -> NUMBER .)
    GTE             reduce using rule 64 (literal -> NUMBER .)
    LT              reduce using rule 64 (literal -> NUMBER .)
    LTE             reduce using rule 64 (literal -> NUMBER .)
    AND             reduce using rule 64 (literal -> NUMBER .)
    OR              reduce using rule 64 (literal -> NUMBER .)
    QMARK           reduce using rule 64 (literal -> NUMBER .)
    RKEY            reduce using rule 64 (literal -> NUMBER .)
    RPAREN          reduce using rule 64 (literal -> NUMBER .)
    RCOR            reduce using rule 64 (literal -> NUMBER .)
    COLON           reduce using rule 64 (literal -> NUMBER .)


state 31

    (65) literal -> STRING_LITERAL .

    COMMA           reduce using rule 65 (literal -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 65 (literal -> STRING_LITERAL .)
    PLUS            reduce using rule 65 (literal -> STRING_LITERAL .)
    MINUS           reduce using rule 65 (literal -> STRING_LITERAL .)
    MULT            reduce using rule 65 (literal -> STRING_LITERAL .)
    DIVIDE          reduce using rule 65 (literal -> STRING_LITERAL .)
    MOD             reduce using rule 65 (literal -> STRING_LITERAL .)
    EQUALS          reduce using rule 65 (literal -> STRING_LITERAL .)
    DIFFERENT       reduce using rule 65 (literal -> STRING_LITERAL .)
    GT              reduce using rule 65 (literal -> STRING_LITERAL .)
    GTE             reduce using rule 65 (literal -> STRING_LITERAL .)
    LT              reduce using rule 65 (literal -> STRING_LITERAL .)
    LTE             reduce using rule 65 (literal -> STRING_LITERAL .)
    AND             reduce using rule 65 (literal -> STRING_LITERAL .)
    OR              reduce using rule 65 (literal -> STRING_LITERAL .)
    QMARK           reduce using rule 65 (literal -> STRING_LITERAL .)
    RKEY            reduce using rule 65 (literal -> STRING_LITERAL .)
    RPAREN          reduce using rule 65 (literal -> STRING_LITERAL .)
    RCOR            reduce using rule 65 (literal -> STRING_LITERAL .)
    COLON           reduce using rule 65 (literal -> STRING_LITERAL .)


state 32

    (66) literal -> FALSE .

    COMMA           reduce using rule 66 (literal -> FALSE .)
    SEMICOLON       reduce using rule 66 (literal -> FALSE .)
    PLUS            reduce using rule 66 (literal -> FALSE .)
    MINUS           reduce using rule 66 (literal -> FALSE .)
    MULT            reduce using rule 66 (literal -> FALSE .)
    DIVIDE          reduce using rule 66 (literal -> FALSE .)
    MOD             reduce using rule 66 (literal -> FALSE .)
    EQUALS          reduce using rule 66 (literal -> FALSE .)
    DIFFERENT       reduce using rule 66 (literal -> FALSE .)
    GT              reduce using rule 66 (literal -> FALSE .)
    GTE             reduce using rule 66 (literal -> FALSE .)
    LT              reduce using rule 66 (literal -> FALSE .)
    LTE             reduce using rule 66 (literal -> FALSE .)
    AND             reduce using rule 66 (literal -> FALSE .)
    OR              reduce using rule 66 (literal -> FALSE .)
    QMARK           reduce using rule 66 (literal -> FALSE .)
    RKEY            reduce using rule 66 (literal -> FALSE .)
    RPAREN          reduce using rule 66 (literal -> FALSE .)
    RCOR            reduce using rule 66 (literal -> FALSE .)
    COLON           reduce using rule 66 (literal -> FALSE .)


state 33

    (67) literal -> TRUE .

    COMMA           reduce using rule 67 (literal -> TRUE .)
    SEMICOLON       reduce using rule 67 (literal -> TRUE .)
    PLUS            reduce using rule 67 (literal -> TRUE .)
    MINUS           reduce using rule 67 (literal -> TRUE .)
    MULT            reduce using rule 67 (literal -> TRUE .)
    DIVIDE          reduce using rule 67 (literal -> TRUE .)
    MOD             reduce using rule 67 (literal -> TRUE .)
    EQUALS          reduce using rule 67 (literal -> TRUE .)
    DIFFERENT       reduce using rule 67 (literal -> TRUE .)
    GT              reduce using rule 67 (literal -> TRUE .)
    GTE             reduce using rule 67 (literal -> TRUE .)
    LT              reduce using rule 67 (literal -> TRUE .)
    LTE             reduce using rule 67 (literal -> TRUE .)
    AND             reduce using rule 67 (literal -> TRUE .)
    OR              reduce using rule 67 (literal -> TRUE .)
    QMARK           reduce using rule 67 (literal -> TRUE .)
    RKEY            reduce using rule 67 (literal -> TRUE .)
    RPAREN          reduce using rule 67 (literal -> TRUE .)
    RCOR            reduce using rule 67 (literal -> TRUE .)
    COLON           reduce using rule 67 (literal -> TRUE .)


state 34

    (8) varSpec -> ID LCOR NUMBER . RCOR
    (9) varSpec -> ID LCOR NUMBER . RCOR ASSIGN LKEY literalSeq RKEY

    RCOR            shift and go to state 41


state 35

    (75) varSpecSeq -> varSpec COMMA varSpecSeq .

    SEMICOLON       reduce using rule 75 (varSpecSeq -> varSpec COMMA varSpecSeq .)


state 36

    (6) varSpec -> ID .
    (7) varSpec -> ID . ASSIGN literal
    (8) varSpec -> ID . LCOR NUMBER RCOR
    (9) varSpec -> ID . LCOR NUMBER RCOR ASSIGN LKEY literalSeq RKEY

    COMMA           reduce using rule 6 (varSpec -> ID .)
    SEMICOLON       reduce using rule 6 (varSpec -> ID .)
    ASSIGN          shift and go to state 21
    LCOR            shift and go to state 22


state 37

    (3) dec -> ID LPAREN paramList RPAREN LKEY . block RKEY
    (15) block -> . varDecList stmtList
    (72) varDecList -> . varDec varDecList
    (73) varDecList -> . empty
    (5) varDec -> . type varSpecSeq SEMICOLON
    (86) empty -> .
    (10) type -> . INT
    (11) type -> . STRING
    (12) type -> . BOOLEAN

    error           reduce using rule 86 (empty -> .)
    IF              reduce using rule 86 (empty -> .)
    WHILE           reduce using rule 86 (empty -> .)
    FOR             reduce using rule 86 (empty -> .)
    BREAK           reduce using rule 86 (empty -> .)
    RETURN          reduce using rule 86 (empty -> .)
    READ            reduce using rule 86 (empty -> .)
    WRITE           reduce using rule 86 (empty -> .)
    ID              reduce using rule 86 (empty -> .)
    RKEY            reduce using rule 86 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 9

    block                          shift and go to state 42
    varDecList                     shift and go to state 43
    varDec                         shift and go to state 44
    empty                          shift and go to state 45
    type                           shift and go to state 46

state 38

    (71) paramSeq -> param COMMA paramSeq .

    RPAREN          reduce using rule 71 (paramSeq -> param COMMA paramSeq .)


state 39

    (14) param -> type ID RCOR . LCOR

    LCOR            shift and go to state 47


state 40

    (4) dec -> type ID LPAREN paramList RPAREN . LKEY block RKEY

    LKEY            shift and go to state 48


state 41
